# ESR

ALOE-1.6_DOCENCIA_SEPT17/: MODULES_INFO.txt  Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac
ALOE-1.6_DOCENCIA_SEPT17/ECLIPSE_ENV/.metadata/: version.ini
ALOE-1.6_DOCENCIA_SEPT17/INSTALL_ALOE/: scriptInstallALL.sh
ALOE-1.6_DOCENCIA_SEPT17/SWMAN_EXECS/: data_source_sink
ALOE-1.6_DOCENCIA_SEPT17/SWMAN_EXECS/linux/: CHANNEL_ANALYZER  CP  CPLX_FILTER  CRC  CTRL_example2  DAC_JACK0  DCP  DDC  DDC3p16  DEMAPPING  DUC17  DUCt16  GRAPH  LTE_bitInterleaver  MAPPING  MAPPINGIII  PROVA  PSS_SYNCHRO  PSS_SYNCHt16  REAL_FILTER  TURBODUMMY  bridge  cg_merge  channel_noise  cmdman  dac_tx  data_source  data_source_sink  deMAPPINGII  demod16QAM  exec  fft_ifft  frontend  gen9SK_CRC  gen9SK_cyclic  gen9SK_ifft  gen_binsource  gen_crc  gen_interleaver  gen_sink  (+25 more)
ALOE-1.6_DOCENCIA_SEPT17/TEMP/: LAB2_exec.txt  LAB3_exec.txt
ALOE-1.6_DOCENCIA_SEPT17/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
ALOE-1.6_DOCENCIA_SEPT17/cmdman_console/: Makefile  Makefile.in
ALOE-1.6_DOCENCIA_SEPT17/cmdman_console/src/: cmdman_cmds.c  cmdman_prints.c
ALOE-1.6_DOCENCIA_SEPT17/doc/: Thumbs.db
ALOE-1.6_DOCENCIA_SEPT17/hw_api/lnx/: Makefile  Makefile.in
ALOE-1.6_DOCENCIA_SEPT17/modules/CP/: .cproject  .project
ALOE-1.6_DOCENCIA_SEPT17/modules/CTRL_example2/: .cproject  .project
ALOE-1.6_DOCENCIA_SEPT17/modules/DCP/: .cproject  .project
ALOE-1.6_DOCENCIA_SEPT17/modules/DUCt16/: .cproject  .project
(+434 files in other folders)
